// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get empty model: getEmpty() 1`] = `
ClassDecoratorExample {
  "age": 16,
  "date": undefined,
  "list": undefined,
  "name": "fghkkk",
}
`;

exports[`Get empty model: getEmpty() 2`] = `
ClassDecoratorExample {
  "age": 16,
  "date": undefined,
  "list": undefined,
  "name": "fghkkk",
}
`;

exports[`Get empty object: getEmpty() 1`] = `
ClassDecoratorExample {
  "age": 16,
  "date": undefined,
  "list": undefined,
  "name": "fghkkk",
}
`;

exports[`model instanciate 1`] = `
Model {
  "data": ClassDecoratorExample {
    "age": 16,
    "date": undefined,
    "list": undefined,
    "name": "fghkkk",
  },
  "schema": Object {
    "description": "teste",
    "properties": Object {
      "age": Object {
        "default": 16,
        "type": "number",
      },
      "ages": Object {
        "maximum": 23,
        "type": "number",
      },
      "date": Object {
        "format": "date",
        "type": "string",
      },
      "list": Object {
        "type": "array",
      },
      "name": Object {
        "default": "fghkkk",
        "title": "Name",
        "type": "string",
      },
    },
  },
}
`;

exports[`static decorator static 1`] = `
Object {
  "description": "teste",
  "properties": Object {
    "age": Object {
      "default": 16,
      "type": "number",
    },
    "ages": Object {
      "maximum": 23,
      "type": "number",
    },
    "date": Object {
      "format": "date",
      "type": "string",
    },
    "list": Object {
      "type": "array",
    },
    "name": Object {
      "default": "fghkkk",
      "title": "Name",
      "type": "string",
    },
  },
}
`;
